enrich append api